[package]
name = "jswasm"
version = "0.1.0"
edition = "2021"

[dependencies]
oxc_allocator = {version="0.21.0", features=["serialize"]}
oxc_ast = "0.21.0"
oxc_parser = "0.21.0"
oxc_span = "0.21.0"
oxc_syntax = { version= "0.21.0", features=["serialize"] }
serde = "1.0.204"
serde_json = "1.0.120"

[features]
