[workspace]
members = [ "crates/ecma262", "crates/quickjs", "crates/unicode-table-generator", "crates/wasm", "crates/wat"]
resolver = "2"

[package]
name = "jasper"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5.29"
rand = "0.9.0"
serde = "1.0.217"
ucd-parse = "0.1.13"
wat = { path = "./crates/wat"}
yaml-rust = "0.4.5"

[[bin]]
name = "wasm"
path = "crates/wasm/src/main.rs"

[[bin]]
name = "ecma262-runner"
path = "crates/ecma262/src/main.rs"

[[bin]]
name = "unicode-table-generator"
path = "crates/unicode-table-generator/src/main.rs"
